<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dgg.cynthia.com.navegacion.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:id="@+id/IDsuma"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/IDmultiplicacion"
        android:layout_alignStart="@+id/IDmultiplicacion"
        tools:text="@string/IDsuma"
        android:text="@string/IDsuma" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/IDresta"
        android:layout_below="@+id/IDsuma"
        android:layout_alignStart="@+id/IDsuma"
        android:layout_alignEnd="@+id/IDmultiplicacion"
        tools:text="@string/IDresta"
        android:text="@string/IDresta" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/IDmultiplicacion"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/IDresta"
        android:layout_centerHorizontal="true"
        tools:text="@string/IDmultiplicacion"
        android:text="@string/IDmultiplicacion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/IDdivision"
        android:layout_below="@+id/IDmultiplicacion"
        android:layout_alignStart="@+id/IDresta"
        android:layout_alignEnd="@+id/IDmultiplicacion"
        tools:text="@string/IDdivision"
        android:text="@string/IDdivision" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IDdivision"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/IDsalir"
        tools:text="@string/IDsalir"
        android:text="@string/IDsalir" />
</RelativeLayout>
