<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_suma"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dgg.cynthia.com.navegacion.Suma">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:id="@+id/IDnameSuma"
        tools:text="@string/IDnameSuma"
        android:text="@string/IDnameSuma" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IDnameSuma"
        android:layout_alignParentStart="true"
        android:layout_marginTop="102dp"
        android:id="@+id/IDnameSuma2"
        tools:text="@string/IDnameSuma2"
        android:text="@string/IDnameSuma2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/IDnameSuma"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/IDsumatxt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/IDnameSuma2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/IDsumatxt2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/IDrealizarSuma"
        android:layout_below="@+id/IDsumatxt2"
        android:layout_centerHorizontal="true"
        tools:text="@string/IDbtnSuma"
        android:text="@string/IDbtnSuma" />
</RelativeLayout>
