<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_division"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dgg.cynthia.com.navegacion.division">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="35dp"
        android:id="@+id/IDnameDivision"
        tools:text="@string/IDnameDivision"
        android:text="@string/IDnameDivision" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IDnameDivision"
        android:layout_alignStart="@+id/IDnameDivision"
        android:layout_marginTop="77dp"
        android:id="@+id/IDnameDivision2"
        tools:text="@string/IDnameDivision2"
        android:text="@string/IDnameDivision2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:id="@+id/IDbtnDivision"
        tools:text="@string/IDbtnDivision"
        android:text="@string/IDbtnDivision" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/IDnameDivision"
        android:layout_alignStart="@+id/IDnameDivision"
        android:layout_marginTop="13dp"
        android:id="@+id/IDtxtDivision" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/IDnameDivision2"
        android:layout_alignEnd="@+id/IDtxtDivision"
        android:layout_marginTop="33dp"
        android:id="@+id/IDtxtDivision2" />
</RelativeLayout>
