<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_multiplicacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dgg.cynthia.com.navegacion.multiplicacion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="33dp"
        android:id="@+id/IDnameMultiplicacion"
        tools:text="@string/IDnameMultiplicacion"
        android:text="@string/IDnameMultiplicacion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IDnameMultiplicacion"
        android:layout_alignStart="@+id/IDnameMultiplicacion"
        android:layout_marginTop="83dp"
        android:id="@+id/IDnameDivision2"
        tools:text="@string/IDnameMultiplicacion2"
        android:text="@string/IDnameMultiplicacion2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="129dp"
        android:id="@+id/IDbtnMultiplicacion"
        tools:text="@string/IDbtnMultiplicacion"
        android:text="@string/IDbtnMultiplicacion" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/IDnameMultiplicacion"
        android:layout_alignStart="@+id/IDnameMultiplicacion"
        android:layout_marginTop="15dp"
        android:id="@+id/IDtxtMultiplicacion" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/IDnameDivision2"
        android:layout_alignStart="@+id/IDnameDivision2"
        android:layout_marginTop="35dp"
        android:id="@+id/IDtxtMultiplicacion2" />
</RelativeLayout>
